<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/montant"
        android:inputType="numberDecimal"
        android:autofillHints="amount" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/date_format"
        android:inputType="date"
        android:autofillHints="date" />

    <EditText
        android:id="@+id/etNote"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/note"
        android:inputType="text"
        android:autofillHints="off" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:contentDescription="@string/categorie" />

</LinearLayout>